# sndgui

./: .gitignore  .travis.yml  BasicXMLSyntaxHighlighter.cpp  __previous_appveyor.yml  appveyor.yml  editdialog.cpp  editdialog.h  loaddialog.cpp  loaddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sndgui.pro  style.cpp  todo.org
cmake/: FindLibSndwch.cmake
icons/: light.icns
pre_cmake/: editdialog.cpp  editdialog.h  mainwindow.h  mainwindow.ui  sndgui.pro  style.h
src/: CMakeLists.txt  FileSelectorWidget.cpp  FileSelectorWidget.h  SvgEditDialog.cpp  SvgEditDialog.h  SvgEditorWidget.cpp  SvgEditorWidget.h  SvgPreviewWidget.cpp  SvgPreviewWidget.h  editdialog.cpp  editdialog.h  loaddialog.cpp  loaddialog.h  main.cpp  main_editor.cpp  main_load.cpp  resources.qrc  xmlsyntax.cpp
src/qdarkstyle/: info_on_qdarkstyle.txt
